Fix problem with the width of header and footer on mobile devices

--- a/webroot/css/datacenter.less
+++ b/webroot/css/datacenter.less
@@ -288,6 +288,7 @@ header {
     background-color: #fff;
     border-bottom: 5px solid #cc0000;
     height: 70px;
+    min-width: 1000px;
     position: relative;
 
     .max_width {
@@ -439,6 +440,7 @@ header {
     border-top: 5px solid #cc0000;
     font-size: 90%;
     line-height: 1.3em;
+    min-width: 1000px;
     text-align: left;
 
     .max_width > section {
